[cdb] Fix custom types going out of bounds

--- a/bin/cdb.less
+++ b/bin/cdb.less
@@ -612,6 +612,7 @@
 			position: absolute;
 			z-index: 900;
 			padding: 2px 2px 2px 2px;
+			right: 0px;
 			display: flex;
 			background-color: #333333;
 			border-style: solid;
